--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="android-touch-icon" href="/favicon.png">
   <link rel="windows-touch-icon" href="/favicon.png">
   <link rel="icon" href="/favicon.png" type="image/png" sizes="16x16" id='favicon'>
-  <title><%= htmlWebpackPlugin.options.title %></title>
+  <title><contaline></title>
   <style type="text/css" id="styles"></style>
   <style>
     .pac-container {
