--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
   <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
 </head>
 <body>
-  <div id="app" role="main"></div>
+  <div id="app" role="main">helllow amigos</div>
 </body>
 </html>
